# webstatuspi

./: .dockerignore  .env.local.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  config.yaml  generate_screenshots.py  install.sh  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test_config.yaml
.claude/: ralph-loop.local.md  settings.local.json
.claude/commands/: add-learning.md  add-task.md  block-task.md  check-task.md  complete-task.md  deploy.md  dev-status.md  lint.md  next-task.md  parallel-tasks.md  ssh-pi.md  start-task.md  sync-docs.md  test.md
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
benchmark/: benchmark-results.txt  benchmark.sh  config-webstatuspi.yaml  docker-compose.yml
docs/: ARCHITECTURE-WEB-SERVER-SEPARATION.md  ARCHITECTURE.md  FEATURE_SUGGESTIONS.md  HARDWARE-LOAD-ANALYSIS.md  HARDWARE.md  RESOURCES.md  TELEGRAM_SETUP.md  TROUBLESHOOTING.md
docs/dev/: AGENTS.md  BACKLOG_GROOMING_2026-01-23.md  BAD_PRACTICES_ANALYSIS.md  INDEX.md  LATENCY_INVESTIGATION_2026-01-22.md  LEARNINGS.md  RELEASING.md  WORKFLOW.md
docs/dev/backlog/: 001-config-loader.md  002-database-layer.md  003-monitor-loop.md  004-api-server.md  005-main-orchestration.md  007-no-internet-detection.md  008-global-check-interval.md  010-clean-database-command.md  012-reset-data-button.md  016-webhook-alerts.md  017-telegram-bot-documentation.md  018-security-audit.md  019-extended-metrics.md  020-migrate-datetime-utcnow.md  020-response-time-percentiles.md  021-http-headers-capture.md  022-dashboard-detail-graphs.md  024-prometheus-metrics.md  025-content-validation.md  026-ssl-certificate-monitoring.md  027-custom-status-codes.md  028-tcp-monitoring.md  029-dns-monitoring.md  030-configurable-user-agent.md  031-periodic-vacuum.md  032-latency-degradation-alerts.md  033-heartbeat-dead-mans-snitch.md  034-modal-prefetch-on-hover.md  035-request-deduplication.md  036-debounce-polling-inactive-tabs.md  037-lazy-chart-rendering.md  038-resource-hints-prefetch.md  043-ttfb-metric.md  044-content-type-encoding-metrics.md  045-redirect-tracking.md  046-security-headers-tracking.md  047-cache-headers-tracking.md  048-resolved-ip-tracking.md  049-tls-version-tracking.md  050-progress-bar-visibility.md  (+3 more)
docs/dev/done/: 001-config-loader.md  002-database-layer.md  003-monitor-loop.md  004-api-server.md  005-main-orchestration.md  006-python-packaging.md  007-no-internet-detection.md  008-global-check-interval.md  009-config-tests.md  010-clean-database-command.md  011-evaluate-dashboard-templates.md  012-reset-data-button.md  013-locale-aware-datetime-formatting.md  014-ci-workflow-github-actions.md  015-dashboard-accessibility.md  017-telegram-bot-documentation.md  018-security-audit.md  019-extended-metrics.md  020-migrate-datetime-utcnow.md  022-dashboard-detail-graphs.md  023-pwa-dashboard.md  024-prometheus-metrics.md  025-content-validation.md  026-ssl-certificate-monitoring.md  027-custom-status-codes.md  028-tcp-monitoring.md  030-configurable-user-agent.md  031-periodic-vacuum.md  032-latency-degradation-alerts.md  033-heartbeat-dead-mans-snitch.md  034-modal-prefetch-on-hover.md  035-request-deduplication.md  036-debounce-polling-inactive-tabs.md  037-lazy-chart-rendering.md  038-resource-hints-prefetch.md  039-dark-light-mode-toggle.md  040-rss-feed-endpoint.md  041-system-statistics-summary.md  042-badge-svg-endpoint.md  043-ttfb-metric.md  (+1 more)
docs/dev/reports/: 2026-01-23-modal-timeout-fix.md
docs/testing/: DOCKER-QEMU.md  INDEX.md  MOCKING.md  UNIT-TESTS.md
scripts/: ssh-pi.sh
src/: __init__.py
tests/: test_alerter.py  test_api.py  test_badge.py  test_config.py  test_database.py  test_monitor.py  test_rss.py  test_security.py
webstatuspi/: __init__.py  __main__.py  _dashboard.py  _pwa.py  _rss.py  alerter.py  api.py  config.py  database.py  heartbeat.py  models.py  monitor.py  security.py  service.py
webstatuspi/_dashboard/: __init__.py  _css.py  _html.py  _js_charts.py  _js_core.py  _js_utils.py  dashboard.html
webstatuspi/_dashboard/static/: charts.js  core.js  styles.css  utils.js
webstatuspi/_pwa/: __init__.py  _icons.py  _manifest.py  _offline.py  _registration.py  _service_worker.py  _version.py
