[metadata]
name = webstatuspi
version = 0.1.0
description = Lightweight web monitoring system for Raspberry Pi 1B+

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PyYAML>=6.0.1
    requests>=2.31.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-mock>=3.0.0
    coverage>=6.0.0

[options.entry_points]
console_scripts =
    webstatuspi = webstatuspi:main
